# Raspberry-Pi-PICO-tensorflow-lite-micro-hello-world-example

./: CMakeLists.txt  README.md  flash.sh
model/hello_world/: main.cc  main_functions.cc  output_handler.cc
